[gd_scene load_steps=9 format=3 uid="uid://cxd4y8qg56hq3"]

[ext_resource type="Script" path="res://ui/combat_map_view/unit_inventory_slot/unit_inventory_slot.gd" id="1_kpyca"]
[ext_resource type="FontFile" uid="uid://b63aolstq2o3t" path="res://resources/fonts/CrimsonText-Regular.ttf" id="1_mnk0y"]
[ext_resource type="FontFile" uid="uid://blovgibarp2q2" path="res://resources/fonts/CrimsonText-Bold.ttf" id="3_5ks25"]
[ext_resource type="Theme" uid="uid://basxgfcidqdr7" path="res://resources/themes/combat/default_ui_theme.tres" id="4_3ax6y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55rkq"]
bg_color = Color(0, 0.380392, 0.313726, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.392157, 1, 0.737255, 1)
border_blend = true
shadow_color = Color(0.392157, 1, 0.737255, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyniy"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_3w7h2"]
Button/fonts/font = ExtResource("1_mnk0y")
Button/styles/hover = SubResource("StyleBoxFlat_55rkq")
Button/styles/normal = SubResource("StyleBoxFlat_fyniy")

[sub_resource type="Theme" id="Theme_5ooet"]
default_font = ExtResource("1_mnk0y")
default_font_size = 18

[node name="UnitInventorySlot" type="Control"]
custom_minimum_size = Vector2(270, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -882.0
offset_bottom = -608.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_3w7h2")
script = ExtResource("1_kpyca")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 270.0
offset_bottom = 40.0
theme = SubResource("Theme_3w7h2")

[node name="EquippedMargin" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 270.0
offset_bottom = 40.0
mouse_filter = 2
theme = SubResource("Theme_5ooet")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15

[node name="Equipped" type="Label" parent="EquippedMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_5ks25")
theme_override_font_sizes/font_size = 10
text = "E"
vertical_alignment = 2

[node name="InfoMargin" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 270.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Uses" type="Label" parent="InfoMargin"]
layout_mode = 2
theme = SubResource("Theme_5ooet")
theme_override_font_sizes/font_size = 18
text = "46"
horizontal_alignment = 2
vertical_alignment = 1

[node name="OptionsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 213.0
offset_top = -19.0
offset_right = 348.0
offset_bottom = 65.0
theme = ExtResource("4_3ax6y")
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="OptionsContainer"]
layout_mode = 2
theme = ExtResource("4_3ax6y")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/Panel"]
layout_mode = 2
offset_right = 125.0
offset_bottom = 72.0

[node name="Button1" type="Button" parent="OptionsContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_3w7h2")
text = "Action"

[node name="Button2" type="Button" parent="OptionsContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_3w7h2")
text = "Discard"

[connection signal="mouse_entered" from="Button" to="." method="mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/Panel/VBoxContainer/Button1" to="." method="mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/Panel/VBoxContainer/Button2" to="." method="mouse_entered"]
